k8s/webcrawler.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webcrawler
  namespace: van200
  uid: 647aeb07-8a34-4378-9283-1d4eaa40a512
  resourceVersion: '1469184330'
  generation: 37
  creationTimestamp: '2026-05-07T19:08:44Z'
  annotations:
    deployment.kubernetes.io/revision: '19'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"webcrawler","namespace":"van200"},"spec":{"replicas":1,"selector":{"matchLabels":{"application":"webcrawler","env":"van200"}},"strategy":{"rollingUpdate":{"maxSurge":1,"maxUnavailable":0}},"template":{"metadata":{"labels":{"application":"webcrawler","env":"van200"}},"spec":{"affinity":{"nodeAffinity":{"requiredDuringSchedulingIgnoredDuringExecution":{"nodeSelectorTerms":[{"matchExpressions":[{"key":"resource", [...]
  managedFields:
    - manager: dashboard
      operation: Update
      apiVersion: apps/v1
      time: '2026-05-26T06:25:46Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:template:
            f:metadata:
              f:annotations:
                .: {}
                f:kubectl.kubernetes.io/restartedAt: {}
            f:spec:
              f:containers:
                k:{"name":"webcrawler"}:
                  f:args: {}
                  f:command: {}
                  f:env:
                    .: {}
                    k:{"name":"DeploymentName"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"MAX_CONCURRENT_PAGE_CRAWLS"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"MAX_CONCURRENT_SITEMAP_DISCOVERY"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"REQUEST_TOKEN"}:
                      .: {}
                      f:name: {}
                      f:value: {}
    - manager: kubectl
      operation: Update
      apiVersion: apps/v1
      time: '2026-05-27T22:03:24Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:labels:
                .: {}
                f:application: {}
                f:env: {}
            f:spec:
              f:affinity:
                .: {}
                f:nodeAffinity:
                  .: {}
                  f:requiredDuringSchedulingIgnoredDuringExecution: {}
              f:containers:
                k:{"name":"webcrawler"}:
                  .: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:livenessProbe:
                    .: {}
                    f:failureThreshold: {}
                    f:periodSeconds: {}
                    f:successThreshold: {}
                    f:tcpSocket:
                      .: {}
                      f:port: {}
                    f:timeoutSeconds: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":80,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:name: {}
                      f:protocol: {}
                  f:resources: {}
                  f:startupProbe:
                    .: {}
                    f:failureThreshold: {}
                    f:periodSeconds: {}
                    f:successThreshold: {}
                    f:tcpSocket:
                      .: {}
                      f:port: {}
                    f:timeoutSeconds: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:imagePullSecrets:
                .: {}
                k:{"name":"comm100-harbor"}: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2026-05-27T22:11:15Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      subresource: status
spec:
  replicas: 5
  selector:
    matchLabels:
      application: webcrawler
      env: van200
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: webcrawler
        env: van200
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-05-25T18:45:06Z'
    spec:
      containers:
        - name: webcrawler
          image: >-
            images.comm100dev.io/x2/webcrawler/test-van200:2026-05-27-22-01-4d154b35
          command:
            - python3
          args:
            - main.py
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources: {}
          livenessProbe:
            tcpSocket:
              port: 80
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 1
          startupProbe:
            tcpSocket:
              port: 80
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: comm100-harbor
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: resource
                    operator: In
                    values:
                      - application
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 37
  replicas: 5
  updatedReplicas: 5
  readyReplicas: 5
  availableReplicas: 5
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2026-05-27T21:18:06Z'
      lastTransitionTime: '2026-05-27T21:18:06Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2026-05-27T22:11:15Z'
      lastTransitionTime: '2026-05-07T19:40:05Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "webcrawler-5bdbcd999f" has successfully progressed.
